グラデテスト

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="./dist/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Shippori+Mincho&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif+JP:wght@200..900&family=Shippori+Mincho&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -48,14 +50,14 @@
     </header>
     <!-- FV セクション -->
     <section class="bg-background">
-      <div class="w-[85%] text-center mx-auto">
+      <div class="w-[90%] text-center mx-auto">
         <p class="py-5">
           <span class="text-[#d7444a] font-bold">豊富な施工実績</span>と<span
             class="text-[#d7444a] font-bold"
             >安心の4大保証</span
           >で選ばれ続けている<br />Y2ENERGYGROUPにお任せください
         </p>
-        <a href=""
+        <a href="#"
           ><img
             src="images/conv-btn.webp"
             class="w-[80%] mx-auto"
@@ -103,24 +105,29 @@
       <p class="w-[80%] mx-auto text-center py-6 mt-6">
         太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が公開やトラブルの原因になることも・・・
       </p>
-      <div class="bg-background w-[85%] mx-auto py-6">
+      <div class="bg-background w-[90%] mx-auto py-6">
         <div class="max-w-md mx-auto px-3 font-mincho">
-          <h2 class="text-center text-2xl font-bold mb-8 text-gray-800">
+          <h2 class="text-center text-2xl font-semibold mb-8 text-gray-800">
             これらに当てはまる業者は
             <span class="inline-flex items-center gap-1 mt-2">
-              <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
+              <span
+                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
                 >要</span
               >
-              <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
+              <span
+                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
                 >注</span
               >
-              <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
+              <span
+                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
                 >意</span
               >
               <span
-                class="bg-gray-700 text-white px-4 py-2 text-xl font-bold flex items-center justify-center"
+                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
               >
-                !
+                <span style="display: inline-block; transform: rotate(30deg)"
+                  >!</span
+                >
               </span>
             </span>
           </h2>
@@ -128,7 +135,7 @@
           <!-- チェックリスト -->
           <div class="space-y-3 font-semibold">
             <!-- チェック項目1 -->
-            <div class="bg-white shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -152,7 +159,7 @@
             </div>
 
             <!-- チェック項目2 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -176,7 +183,7 @@
             </div>
 
             <!-- チェック項目3 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -200,7 +207,7 @@
             </div>
 
             <!-- チェック項目4 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -224,7 +231,7 @@
             </div>
 
             <!-- チェック項目5 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -248,7 +255,7 @@
             </div>
 
             <!-- チェック項目6 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -272,7 +279,7 @@
             </div>
 
             <!-- チェック項目7 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -296,7 +303,7 @@
             </div>
 
             <!-- チェック項目8 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -320,7 +327,7 @@
             </div>
 
             <!-- チェック項目9 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -343,7 +350,7 @@
               </p>
             </div>
             <!-- チェック項目10 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -370,7 +377,7 @@
       </div>
     </section>
     <!-- 6つのポイントセクション -->
-    <section class="px-4">
+    <section class="w-[90%] mx-auto">
       <img
         src="images/check.webp"
         alt="じゃあどんな業者を選べばいいの？"
@@ -378,45 +385,46 @@
       />
       <div class="py-6 green-gradient">
         <div class="max-w-md mx-auto px-3">
-          <h2 class="text-center text-2xl font-bold mb-8 text-white">
+          <h2 class="text-center text-[1.3rem] mb-8 text-white font-mincho">
             施工評者選びで損しないために<br />押さえておきたい<br />
-            <span class="inline-flex items-center gap-1 mt-2">
-              <span class="bg-white text-green-500 px-4 py-2 text-xl font-bold"
+            <span
+              class="inline-flex items-center gap-0.5 sm:gap-1 mt-2 font-semibold text-[1.6rem] sm:text-[1.4rem] text-[#4fac00]"
+            >
+              <span
+                class="bg-white py-2 font-serif inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
                 >6</span
               >
-              <span class="bg-white text-green-500 px-4 py-2 text-xl font-bold"
+              <span
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
                 >つ</span
               >
-              <span class="bg-white text-green-500 px-4 py-2 text-xl font-bold"
+              <span
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
                 >の</span
               >
               <span
-                class="bg-white text-green-500 px-4 py-2 text-xl font-bold flex items-center justify-center"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                >ポ</span
               >
-                ポ
-              </span>
               <span
-                class="bg-white text-green-500 px-4 py-2 text-xl font-bold flex items-center justify-center"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                >イ</span
               >
-                イ
-              </span>
               <span
-                class="bg-white text-green-500 px-4 py-2 text-xl font-bold flex items-center justify-center"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                >ン</span
               >
-                ン
-              </span>
               <span
-                class="bg-white text-green-500 px-4 py-2 text-xl font-bold flex items-center justify-center"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                >ト</span
               >
-                ト
-              </span>
             </span>
           </h2>
 
           <!-- チェックリスト -->
-          <div class="space-y-3">
+          <div class="space-y-3 font-mincho font-semibold">
             <!-- チェック項目1 -->
-            <div class="bg-white shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -440,7 +448,7 @@
             </div>
 
             <!-- チェック項目2 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -464,7 +472,7 @@
             </div>
 
             <!-- チェック項目3 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -488,7 +496,7 @@
             </div>
 
             <!-- チェック項目4 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -512,7 +520,7 @@
             </div>
 
             <!-- チェック項目5 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -536,7 +544,7 @@
             </div>
 
             <!-- チェック項目6 -->
-            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
+            <div class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -564,15 +572,57 @@
       <p class="text-center py-6">
         省エネ設備は長期使用が前提。<br />補助金や安さだけでなく、施工技術と保証が充実した<br />【安心できる業者】を選びましょう!!
       </p>
+      <a href="#"
+        ><img
+          src="images/conv-btn.webp"
+          class="w-[80%] mx-auto pb-9"
+          alt="経験豊富なプロに無料相談・見積もりを依頼する"
+      /></a>
     </section>
     <!-- 選ばれている理由セクション -->
-    <section class="">
-      <div class="bg-[#f5e6dc] px-4 py-8 text-center">
-        <h2 class="text-center text-2xl font-bold mb-8">
-          株式会社<br />Y2ENERGYGROUPが<br />選ばれている理由
-        </h2>
-        <h3>4つの安心独自保証をプラス</h3>
-        <h3>お見積もりから設置まで全て自社施工だから高品質で低価格</h3>
+    <section class="bg-[#fbf5ee]">
+      <div class="w-[90%] lg:w-[50%] px-4 pt-8 pb-16 text-center mx-auto">
+        <div class="relative">
+          <img
+            src="images/reason-bg1.svg"
+            alt=""
+            class="absolute left-0 bottom-2 w-14 md:hidden pointer-events-none"
+            aria-hidden="true"
+          />
+          <img
+            src="images/reason-bg2.svg"
+            alt=""
+            class="absolute right-0 top-0 w-14 md:hidden pointer-events-none"
+            aria-hidden="true"
+          />
+          <h2
+            class="relative z-10 text-center text-[1.7rem] font-bold pb-8 font-mincho leading-loose tracking-widest"
+          >
+            株式会社<br />Y2ENERGYGROUPが<br />選ばれている理由
+          </h2>
+        </div>
+        <h3>
+          <img
+            src="images/reason-text1.svg"
+            alt="4つの安心独自保証をプラス"
+            class="py-3"
+          />
+        </h3>
+        <img
+          src="images/reason-sm-point1.webp"
+          alt="POINT 15年施工保証 POINT メーカー保証"
+        />
+        <img
+          src="images/reason-sm-point2.webp"
+          alt="POINT 安心サポート POINT 工事保証"
+          class="-mt-4 pb-9"
+        />
+        <h3 class="font-mincho font-semibold text-[1.2rem]">
+          お見積もりから設置まで全て自社施工だから<br /><span
+            class="text-[#4fac00] text-[1.8rem]"
+            >高品質</span
+          >で<span class="text-[#5af300] text-[1.8rem]">低価格</span>
+        </h3>
         <div class="flex py-6 text-center justify-center space-x-5">
           <div>
             <p>大手企業に<br />依頼した場合</p>
@@ -636,7 +686,7 @@
               補助金を活用することで<br />導入費用を大きく削減できます！
             </p>
             <div
-              class="absolute left-1/2 -translate-x-1/2 -bottom-3 w-0 h-0 border-l-12 border-l-transparent border-r-[12px] border-r-transparent border-t-[12px] border-t-gray-600"
+              class="absolute left-1/2 -translate-x-1/2 -bottom-3 w-0 h-0 border-l-12 border-l-transparent border-r-12 border-r-transparent border-t-12 border-t-gray-600"
             ></div>
           </div>
         </div>
