--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     </section>
     <!-- 選ばれている理由セクション -->
     <section class="bg-[#fbf5ee]">
-      <div class="w-[90%] lg:w-[50%] px-4 pt-8 pb-16 text-center mx-auto">
+      <div class="w-[90%] lg:w-[50%] pt-8 pb-16 text-center mx-auto">
         <div class="relative">
           <img
             src="images/reason-bg1.svg"
@@ -617,21 +617,30 @@
           alt="POINT 安心サポート POINT 工事保証"
           class="-mt-4 pb-9"
         />
-        <h3 class="font-mincho font-semibold text-[1.2rem]">
+        <h3 class="font-mincho font-semibold text-[1rem]">
           お見積もりから設置まで全て自社施工だから<br /><span
-            class="text-[#4fac00] text-[1.8rem]"
+            class="text-gradient text-[2rem] font-bold"
             >高品質</span
-          >で<span class="text-[#5af300] text-[1.8rem]">低価格</span>
+          ><span class="font-bold px-1">で</span
+          ><span class="text-gradient text-[2rem] font-bold">低価格</span>
         </h3>
-        <div class="flex py-6 text-center justify-center space-x-5">
-          <div>
-            <p>大手企業に<br />依頼した場合</p>
+        <img src="images/green-border.svg" alt="下線" class="py-2" />
+        <div class="flex py-6 text-center justify-center items-end">
+          <div class="w-[33%] mx-auto flex flex-col">
+            <img src="images/graph1.svg" alt="" class="w-[80%] mx-auto" />
+            <p class="flex-none text-[0.65rem]">大手企業に<br />依頼した場合</p>
           </div>
-          <div>
-            <p>外注を使う企業に<br />依頼した場合</p>
+          <div class="w-[33%] mx-auto flex flex-col">
+            <img src="images/graph2.svg" alt="" class="w-[80%] mx-auto" />
+            <p class="flex-none text-[0.65rem]">
+              外注を使う企業に<br />依頼した場合
+            </p>
           </div>
-          <div>
-            <p>Y2ENERGYGROUPに<br />依頼した場合</p>
+          <div class="w-[33%] mx-auto flex flex-col">
+            <img src="images/graph3.svg" alt="" class="w-[80%] mx-auto" />
+            <p class="flex-none text-[0.65rem]">
+              Y2ENERGYGROUPに<br />依頼した場合
+            </p>
           </div>
         </div>
       </div>
