画像調整前

--- a/index.html
+++ b/index.html
@@ -627,17 +627,29 @@
         <img src="images/green-border.svg" alt="下線" class="py-2" />
         <div class="flex py-6 text-center justify-center items-end">
           <div class="w-[33%] mx-auto flex flex-col">
-            <img src="images/graph1.svg" alt="" class="w-[80%] mx-auto" />
+            <img
+              src="images/graph1.svg"
+              alt="大手企業に依頼した場合のグラフ"
+              class="w-[80%] mx-auto"
+            />
             <p class="flex-none text-[0.65rem]">大手企業に<br />依頼した場合</p>
           </div>
           <div class="w-[33%] mx-auto flex flex-col">
-            <img src="images/graph2.svg" alt="" class="w-[80%] mx-auto" />
+            <img
+              src="images/graph2.svg"
+              alt="外注を使う企業に依頼した場合のグラフ"
+              class="w-[80%] mx-auto"
+            />
             <p class="flex-none text-[0.65rem]">
               外注を使う企業に<br />依頼した場合
             </p>
           </div>
           <div class="w-[33%] mx-auto flex flex-col">
-            <img src="images/graph3.svg" alt="" class="w-[80%] mx-auto" />
+            <img
+              src="images/graph3.svg"
+              alt="Y2ENERGYGROUPに依頼した場合のグラフ"
+              class="w-[80%] mx-auto"
+            />
             <p class="flex-none text-[0.65rem]">
               Y2ENERGYGROUPに<br />依頼した場合
             </p>
@@ -648,7 +660,8 @@
     <!-- 補助金セクション -->
     <section>
       <div class="bg-teal-100 text-center py-9">
-        <p>今ならまだ間に合う!!</p>
+        <img src="images/sarani.svg" alt="さらに" />
+        <img src="images/maniau.svg" alt="今ならまだ間に合う！！" />
         <h2 class="text-xl">
           <span class="block">東京都では太陽光・蓄電池の導入に</span><br />
           <span class="flex items-center justify-center text-gray-700">
