さらに画像OK

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     </section>
     <!-- 選ばれている理由セクション -->
     <section class="bg-[#fbf5ee]">
-      <div class="w-[90%] lg:w-[50%] pt-8 pb-16 text-center mx-auto">
+      <div class="w-[90%] lg:w-[50%] pt-8 pb-20 text-center mx-auto">
         <div class="relative">
           <img
             src="images/reason-bg1.svg"
@@ -659,8 +659,12 @@
     </section>
     <!-- 補助金セクション -->
     <section>
-      <div class="bg-teal-100 text-center py-9">
-        <img src="images/sarani.svg" alt="さらに" />
+      <div class="bg-teal-100 text-center pt-16 pb-9 relative">
+        <img
+          src="images/sarani.svg"
+          alt="さらに"
+          class="w-[22%] absolute -top-12 left-1/2 -translate-x-1/2"
+        />
         <img src="images/maniau.svg" alt="今ならまだ間に合う！！" />
         <h2 class="text-xl">
           <span class="block">東京都では太陽光・蓄電池の導入に</span><br />
