施工実績前まで

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif+JP:wght@200..900&family=Shippori+Mincho&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif+JP:wght@200..900&family=Shippori+Mincho&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -659,61 +661,107 @@
     </section>
     <!-- 補助金セクション -->
     <section>
-      <div class="bg-teal-100 text-center pt-16 pb-9 relative">
+      <div class="bg-[#c5e1df] text-center pb-9 relative pt-0">
         <img
           src="images/sarani.svg"
           alt="さらに"
           class="w-[22%] absolute -top-12 left-1/2 -translate-x-1/2"
         />
-        <img src="images/maniau.svg" alt="今ならまだ間に合う！！" />
-        <h2 class="text-xl">
-          <span class="block">東京都では太陽光・蓄電池の導入に</span><br />
-          <span class="flex items-center justify-center text-gray-700">
-            <span
-              class="flex flex-col items-center justify-center text-3xl leading-tight"
-            >
-              <span>最</span>
-              <span>大</span>
-            </span>
-
-            <span class="flex items-center text-8xl font-medium"> 300 </span>
-
-            <span
-              class="flex flex-col items-center justify-center text-3xl leading-tight"
-            >
-              <span>万</span>
-              <span>円</span>
-            </span></span
-          ><br />
-          <span class="text-red-500">補助金が支給</span>されます！
-        </h2>
-        <div class="my-6 bg-white mx-6 py-8 rounded-xl">
-          <p>
-            <span class="bg-gray-500 text-white inline-block">
-              お客様に誠実・真面目なY2エナジーグループ
-            </span>
-            <span class="inline-flex items-center gap-1 mt-2">
-              <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
-                >大</span
-              >
-              <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
-                >推</span
-              >
-              <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
-                >薦</span
-              >
-              の </span
-            ><br />補助金活用プラン！
-          </p>
-          <div
-            class="relative bg-gray-600 text-white rounded-lg px-6 py-4 mx-4 mt-6"
+        <img
+          src="images/maniau.svg"
+          alt="今ならまだ間に合う！！"
+          class="translate-y-0 w-[80%] mx-auto"
+        />
+        <div class="w-[90%] mx-auto">
+          <h2
+            class="text-[1rem] mt-4 font-mincho font-semibold tracking-[0.15rem]"
           >
-            <p class="text-sm leading-relaxed">
-              補助金を活用することで<br />導入費用を大きく削減できます！
+            <span class="block">東京都では太陽光・蓄電池の導入に</span><br />
+            <span class="flex items-center justify-center -mt-3">
+              <span
+                class="flex flex-col items-center justify-center text-3xl leading-tight"
+              >
+                <span>最</span>
+                <span>大</span>
+              </span>
+
+              <span
+                class="flex items-center text-8xl font-cinzel font-normal pt-2"
+              >
+                300
+              </span>
+
+              <span
+                class="flex flex-col items-center justify-center text-3xl leading-tight"
+              >
+                <span>万</span>
+                <span>円</span>
+              </span></span
+            >
+            <div class="flex justify-center mt-2 mb-3">
+              <img src="images/line.svg" alt="下線" class="w-[90%]" />
+            </div>
+            <span class="block text-[1.3rem]"
+              ><span class="text-[#d7444a]">補助金が支給</span>されます！</span
+            >
+          </h2>
+          <div class="my-6 bg-white pt-8 rounded-xl">
+            <p>
+              <span
+                class="bg-basecolor text-white text-[0.9rem] inline-block py-1 px-2 mb-2"
+              >
+                お客様に誠実・真面目なY2エナジーグループ
+              </span>
+              <span
+                class="inline-flex items-end text-basecolor font-mincho text-[2.7rem] font-semibold gap-1 mt-2"
+              >
+                <span
+                  class="bg-[#f6c63f] inline-flex items-center justify-center w-16 h-16 leading-none"
+                  >大</span
+                >
+                <span
+                  class="bg-[#f6c63f] inline-flex items-center justify-center w-16 h-16 leading-none"
+                  >推</span
+                >
+                <span
+                  class="bg-[#f6c63f] inline-flex items-center justify-center w-16 h-16 leading-none"
+                  >薦</span
+                ><span class="self-end text-[2rem]">の</span> </span
+              ><br /><span
+                class="font-mincho font-semibold text-[1.8rem] tracking-[0.3rem]"
+                ><span class="text-gradient-blue">補助金活用</span
+                >プラン！</span
+              >
             </p>
             <div
-              class="absolute left-1/2 -translate-x-1/2 -bottom-3 w-0 h-0 border-l-12 border-l-transparent border-r-12 border-r-transparent border-t-12 border-t-gray-600"
-            ></div>
+              class="relative bg-basecolor text-white rounded-lg px-6 py-4 mx-4 mt-6"
+            >
+              <p class="text-sm leading-relaxed">
+                補助金を活用することで<br />導入費用を大きく削減できます！
+              </p>
+              <div
+                class="absolute left-1/2 -translate-x-1/2 -bottom-3 w-0 h-0 border-l-12 border-l-transparent border-r-12 border-r-transparent border-t-12 border-t-gray-600"
+              ></div>
+            </div>
+            <div class="relative mx-auto mt-5">
+              <img
+                src="images/yogi.webp"
+                alt="太陽光担当：與儀"
+                class="w-[40%] mx-auto"
+              />
+              <div
+                class="absolute right-5 top-[75%] transform -translate-y-1/2 text-left"
+              >
+                <p class="text-[#1a3480] text-[0.5rem]">
+                  太陽光担当：與儀（よぎ）
+                </p>
+                <p
+                  class="bg-[#1a3480] text-white p-1 inline-block text-[0.4rem]"
+                >
+                  「誠実、丁寧にご説明します！」
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
