--- a/index.html
+++ b/index.html
@@ -660,8 +660,8 @@
       </div>
     </section>
     <!-- 補助金セクション -->
-    <section>
-      <div class="bg-[#c5e1df] text-center pb-9 relative pt-0">
+    <section class="bg-[#c5e1df]">
+      <div class="text-center pb-9 relative pt-0">
         <img
           src="images/sarani.svg"
           alt="さらに"
@@ -767,14 +767,24 @@
       </div>
     </section>
     <!-- 施工実績セクション -->
-    <section>
-      <div class="bg-yellow-100 py-9">
-        <h2 class="text-3xl text-center">経験豊富な施工実績</h2>
-        <div class="bg-white mx-6 px-6 rounded-xl pb-9">
-          <h3 class="text-center bg-gray-500 mx-9 py-3 text-white rounded-b-md">
+    <section class="bg-[#ffebb4]">
+      <div class="w-[90%] mx-auto pt-9">
+        <h2
+          class="text-3xl text-center font-mincho font-semibold tracking-[0.2rem] mb-5"
+        >
+          経験豊富な施工実績
+        </h2>
+        <div class="bg-white px-6 rounded-xl pb-9">
+          <h3
+            class="text-center bg-basecolor mx-9 py-3 text-white rounded-b-md"
+          >
             東京都在住・A様邸
           </h3>
-          <p class="text-center my-6 text-xl">XSOL太陽光＋蓄電池15kWh</p>
+          <p
+            class="text-center my-6 text-xl font-mincho tracking-[0.25rem] font-semibold"
+          >
+            XSOL太陽光＋蓄電池15kWh
+          </p>
           <table class="w-full mt-4 border-collapse text-sm">
             <tr>
               <td
@@ -827,9 +837,20 @@
               </td>
             </tr>
           </table>
-          <p class="text-center my-6 bg-red-300">imgが入ります</p>
+          <div class="flex my-3">
+            <img
+              src="images/exam_a1.webp"
+              alt="A様邸施工写真1"
+              class="w-1/2 h-auto object-cover"
+            />
+            <img
+              src="images/exam_a2.webp"
+              alt="A様邸施工写真2"
+              class="w-1/2 h-auto object-cover"
+            />
+          </div>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             導入のきっかけ
           </h4>
@@ -837,7 +858,7 @@
             東京都の補助金を利用できると聞き、電気代の高騰もあって太陽光と蓄電池の導入を検討しました。屋根の形状や景観にも合うパネルを希望していたところ、防眩タイプのXSOLパネルを提案いただきました。屋根の配置図とお見積もりの作成には他社さんに比べるとお時間はかかりましたがその分丁寧な対応と正確なレイアウトの作成をして頂き、その中でも配置図のデザイン性と営業様の丁寧さと信頼性でここの会社での導入を決めました。
           </p>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             導入後の感想
           </h4>
@@ -845,7 +866,7 @@
             日中は太陽光でまかなえて、夜は蓄電池の電気で生活できるようになりました。停電時にも安心ですし、アプリで発電や蓄電の状況を確認できるのも便利です。防眩パネルのおかげで反射が少なく、近隣からも“見た目がきれい”と評判です。
           </p>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             担当者コメント
           </h4>
@@ -853,11 +874,15 @@
             今回のA様邸では、東京都補助金を最大限活用し、自己負担を大幅に抑えて導入いただきました。XSOLの防眩パネルは景観に配慮した設計で、都市部の住宅街でも選ばれやすいモデルです。15kWhの大容量蓄電池により、災害時にも安心の電力自立型住宅が実現しました。大変ご好評につき設計にもお時間をいただきましたが、正確な設計且つお客様ファーストの提案や見積もりをさせて頂くという会社の理念が伝わりお客様との契約になり大変嬉しく思います。
           </p>
         </div>
-        <div class="bg-white mx-6 px-6 rounded-xl pb-9 my-15">
-          <h3 class="text-center bg-gray-500 mx-9 py-3 text-white rounded-b-md">
+        <div class="bg-white px-6 rounded-xl pb-9 my-15">
+          <h3
+            class="text-center bg-basecolor mx-9 py-3 text-white rounded-b-md"
+          >
             東京都在住・S様邸
           </h3>
-          <p class="text-center my-6 text-xl">
+          <p
+            class="text-center my-6 text-xl font-mincho tracking-[0.25rem] font-semibold"
+          >
             京セラ太陽光発電システム＋蓄電池16.5kWh
           </p>
           <table class="w-full mt-4 border-collapse text-sm">
@@ -912,9 +937,20 @@
               </td>
             </tr>
           </table>
-          <p class="text-center my-6 bg-red-300">imgが入ります</p>
+          <div class="flex my-3">
+            <img
+              src="images/exam_s1.webp"
+              alt="S様邸施工写真1"
+              class="w-1/2 h-auto object-cover"
+            />
+            <img
+              src="images/exam_s2.webp"
+              alt="S様邸施工写真2"
+              class="w-1/2 h-auto object-cover"
+            />
+          </div>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             導入のきっかけ
           </h4>
@@ -922,7 +958,7 @@
             もともと太陽光には興味がありましたが、補助金のサポート内容を知って「今がベストタイミング」と思い導入を決意しました。信頼性の高い国内メーカーである京セラ製という点も安心でした。家族の安心と、将来の電気代上昇への備えとして決めました。
           </p>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             導入後の感想
           </h4>
@@ -930,7 +966,7 @@
             日中の発電で家の電気をまかない、夜は蓄電池の電気で生活できるので、月々の電気代が約半分になりました。さらに、停電時でもリビング・冷蔵庫・Wi-Fiなどがそのまま使えるので安心です。京セラの蓄電池は見た目もスリムで、外観を損なわないのも嬉しいポイントです。
           </p>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             担当者コメント
           </h4>
@@ -938,11 +974,15 @@
             S様邸では、京セラ製の太陽光と蓄電池の信頼性・長寿命性を重視して導入いただきました。16.5kWhという大容量で、1日以上の停電にも対応可能です。また、京セラの蓄電池は国産メーカーならではの高耐久仕様で、長期的に安定した電力供給を実現できます。東京都の補助金を活用することで、初期費用を大幅に抑えて導入いただきました。
           </p>
         </div>
-        <div class="bg-white mx-6 px-6 rounded-xl pb-9 my-15">
-          <h3 class="text-center bg-gray-500 mx-9 py-3 text-white rounded-b-md">
+        <div class="bg-white px-6 rounded-xl pb-9 my-15">
+          <h3
+            class="text-center bg-basecolor mx-9 py-3 text-white rounded-b-md"
+          >
             東京都在住・K様邸
           </h3>
-          <p class="text-center my-6 text-xl">
+          <p
+            class="text-center my-6 text-xl font-mincho tracking-[0.25rem] font-semibold"
+          >
             カナディアンソーラーEP-CUBE<br />13.8kWh
           </p>
           <table class="w-full mt-4 border-collapse text-sm">
@@ -997,9 +1037,20 @@
               </td>
             </tr>
           </table>
-          <p class="text-center my-6 bg-red-300">imgが入ります</p>
+          <div class="flex my-3">
+            <img
+              src="images/exam_k1.webp"
+              alt="K様邸施工写真1"
+              class="w-1/2 h-auto object-cover"
+            />
+            <img
+              src="images/exam_k2.webp"
+              alt="K様邸施工写真2"
+              class="w-1/2 h-auto object-cover"
+            />
+          </div>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             導入のきっかけ
           </h4>
@@ -1007,7 +1058,7 @@
             電気代の高騰と停電対策のために、太陽光と蓄電池の導入を検討していました。担当の方から東京都の補助金制度を活用すれば、自己負担を大幅に抑えられると聞き、導入を決めました。見た目もスタイリッシュなカナディアンソーラーのEP-CUBEが気に入りました。
           </p>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             導入後の感想
           </h4>
@@ -1015,7 +1066,7 @@
             日中の発電を夜間にしっかり使えるので、電気代の削減効果を実感しています。停電が起きても家じゅうの電気がそのまま使えるのは本当に安心です。デザインもスマートで、家の外観にも自然に馴染んでいます。アプリで発電・蓄電の状況を見られるのも便利です。
           </p>
           <h4
-            class="text-xl bg-gray-500 text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             担当者コメント
           </h4>
@@ -1023,12 +1074,42 @@
             K様邸では、東京都補助金を最大限に活用し、実質的な自己負担を抑えて導入していただきました。EP-CUBEはPCS一体型のコンパクト設計で、外壁スペースを取らず美観性にも優れています。13.8kWhの容量があれば、家族4人の1日分の電力をまかなうことが可能です。太陽光との相性も非常に良く、環境にも家計にもやさしい住宅となりました。
           </p>
         </div>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
-        <p class="text-center leading-relaxed text-xl">
+      </div>
+      <div class="flex">
+        <img
+          src="images/sample1.webp"
+          alt="施工サンプル写真1"
+          class="w-1/2 h-auto object-cover"
+        />
+        <img
+          src="images/sample2.webp"
+          alt="施工サンプル写真2"
+          class="w-1/2 h-auto object-cover"
+        />
+      </div>
+      <div class="flex">
+        <img
+          src="images/sample3.webp"
+          alt="施工サンプル写真3"
+          class="w-1/2 h-auto object-cover"
+        />
+        <img
+          src="images/sample4.webp"
+          alt="施工サンプル写真4"
+          class="w-1/2 h-auto object-cover"
+        />
+      </div>
+      <img src="images/sample5.webp" alt="施工サンプル写真5" />
+      <div class="w-[90%] mx-auto">
+        <p class="text-center leading-relaxed font-mincho font-semibold mt-6">
           安心してお使い頂くために<br />細かい部分までこだわり抜いた<br />施工を心がけており<br />お客様から高い評価を受けています
         </p>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
+        <a href="#"
+          ><img
+            src="images/conv-btn.webp"
+            class="w-[80%] mx-auto py-9"
+            alt="経験豊富なプロに無料相談・見積もりを依頼する"
+        /></a>
       </div>
     </section>
     <!-- 壁面設置が可能！セクション -->
